syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Global.Bank.Protos";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "BankProto";
option objc_class_prefix = "HLW";

package Global;

service Bank{
  rpc GetBank(BankRequest) returns(BankReplyList);
}

message BankRequest{

}

message BankReply{
  int32 BankID = 1;
  string BankName = 2;

}

message BankReplyList{
  repeated BankReply Banks = 1;
}
