syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Tablet.PosAccountNumber.Protos";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "PosAccountNumberProto";
option objc_class_prefix = "HLW";

service PosAccountNumber {

  rpc GetPosAccountNumber (PosAccountNumberRequest) returns (PosAccountNumberReplyList);
}


message PosAccountNumberRequest {
 int32 PosAccountNumberID = 1;
 int32 StoreCenterID = 2;
}


message PosAccountNumberReply {

  int32 PosAccountNumberID = 1;
  int32 AccountNumberID= 2;
  string PosNumber = 3;
  int32 BankID = 4;
  string NameBank = 5;
  string BranchCode = 6;
  string BranchName = 7;
  string AccountNumber = 8;


}




message PosAccountNumberReplyList{
	repeated PosAccountNumberReply PosAccountNumbers = 1;
}